Fixed a minor layout issue with the links in the footer. Completely finished the desktop site.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -237,4 +237,5 @@ footer #TermsAndPrivacy {
 footer #TermsAndPrivacy a {
   color: gray;
   text-decoration: none;
+  margin-left: 8px;
 }
